--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
 @tailwind utilities;
 
 .snowflake {
-  color: #00f6fa;
+  color: #A5F2F3;
   font-size: 1em;
   font-family: Arial, sans-serif;
   text-shadow: 0 0 3px #aaaaaa66;
